# lowpoly

./: .gitignore  CMakeLists.txt  README.md
OpenGLStuff/src/: glad.c
PC/src/: config.h  game.cpp
iOS/Polyworld/: ARViewController.swift  AppDelegate.swift  CameraController.swift  Config.swift  Info.plist  MathUtilities.swift  MetalTexture.swift  ResourceManager.swift  Shadowmap.swift  ShareViewController.swift  Sun.swift  ViewController.swift
iOS/Polyworld.xcodeproj/: project.pbxproj
resource/model/: finishline.mtl  startplatform.mtl
src/: config.h  game.cpp  game.h  main.cpp
src/Polyball/: finishline.cpp  finishline.h  polyball.cpp  polyball.h  startplatform.cpp  startplatform.h
src/Postprocess/: Bloom.cpp  Bloom.h  SSR.cpp  SSR.h  gaussblur.cpp  gaussblur.h  postprocessor.cpp  postprocessor.h  shadowmap.cpp  shadowmap.h  skymap.h
src/Resource/: camera.h  fontdisplay.cpp  fontdisplay.h  mesh.cpp  mesh.h  model.cpp  model.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h
src/Scene/: chunk.cpp  chunk.h  noise.cpp  noise.h  plant.cpp  plant.h  scene.cpp  scene.h  submesh.cpp  submesh.h  water.cpp  water.h
src/shader/: SSR.frag  SSR.vert  bloom.frag  cuberender.frag  gaussblur.frag  instancemodel.frag  instancemodel.vert  instancescene.frag  instancescene.geom  instancescene.vert  model.frag  model.vert  modelshadow.vert  normvis.frag  normvis.geom  normvis.vert  polyball.geom  polyball.vert  scene.frag  scene.vert  shadowmap.frag  shadowmap.geom  shadowmap.vert  skybox.frag  skybox.vert  sun.frag  (+12 more)
(+130 files in other folders)
